[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-atlas"
version = "0.1.0"
description = "Game-engine inspired memory management for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "MemoryAtlas Contributors" }]
keywords = ["memory", "agent", "langchain", "llm", "game-engine"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "duckdb>=1.0.0",
    "litellm>=1.40.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
local-embedding = ["sentence-transformers>=2.2.0"]
langchain = ["langchain>=0.3.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/memory_atlas"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
